syntax="proto3";
package main;
option go_package = ".;Tokens";

message Token {
      string token = 1;
}

message Ingredient {
      int64 id = 1;
      uint64 UID = 2;
      string Name =3;
      string Quantity = 4;
      string Weight = 5;
      string Volume =6 ;
      string Expiration = 7;
      string ImageLink = 8;
}

message Pantry {
      repeated Ingredient Pantry = 1;
}

message Empty {}

message UserInfo {
      string City = 1;
      string State = 2;
      repeated string Diets = 3;
      repeated string Intolerances = 4;
      float QuantityThreshold = 5;
}

service Server {
      rpc AuthUser(Token) returns (Token) {}
      rpc GetPantry(Token) returns (Pantry) {}
      rpc GetUserInfo(Token) returns (UserInfo) {}
  }